--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
 <p id="notice"><%= notice %></p>
 
-<h1>It works!</h1>
-You are seeing the rendered view of 'views/home/index.html.erb'
+<h1>Paper Management System</h1>
+
+Welcome to this awesome paper mananement system! 
