add new author path

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,4 +2,4 @@
 
 <h1>Paper Management System</h1>
 
-Welcome to this awesome paper mananement system! 
+Welcome to this awesome paper management system!
