--- a/app/views/author/new.html.erb
+++ b/app/views/author/new.html.erb
@@ -1,1 +1,21 @@
 <h1>Create a new author</h1>
+<%= form_with scope: :author, local: true do |form| %>
+    <p>
+        <%= form.label :firstname %><br>
+        <%= form.text_field :firstname %>
+    </p>
+    <p>
+        <%= form.label :lastname %><br>
+        <%= form.text_field :lastname %>
+    </p>
+    <p>
+        <%= form.label :homepage %><br>
+        <%= form.text_field :homepage %>
+    </p>
+    <p>
+        <%= form.submit %>
+    </p>
+<% end %>
+<form>
+    <input type="button" value="Back" onclick="history.back()">
+</form>
