fix #3 spelling fix

--- a/app/views/author/new.html.erb
+++ b/app/views/author/new.html.erb
@@ -1,12 +1,12 @@
 <h1>Create a new author</h1>
 <%= form_with scope: :author, local: true do |form| %>
     <p>
-        <%= form.label :firstname %><br>
-        <%= form.text_field :firstname %>
+        <%= form.label :first_name %><br>
+        <%= form.text_field :first_name %>
     </p>
     <p>
-        <%= form.label :lastname %><br>
-        <%= form.text_field :lastname %>
+        <%= form.label :last_name %><br>
+        <%= form.text_field :last_name %>
     </p>
     <p>
         <%= form.label :homepage %><br>
