--- a/app/views/author/new.html.erb
+++ b/app/views/author/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Create a new author</h1>
-<%= form_with scope: :author,url: root_path, local: true do |form| %>
+<%= form_with scope: :author,url: '/author', local: true do |form| %>
     <p>
         <%= form.label :first_name %><br>
         <%= form.text_field :first_name %>
