Add edit author feature to fix issue #10

--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -4,3 +4,5 @@
 <p>
     Homepage: <%= @author.homepage %>
 </p>
+<%= link_to 'Edit', edit_author_path(@author) %> |
+<%= link_to 'Back', authors_path %>
