--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -4,6 +4,9 @@
   <tr>
     <th>Name</th>
     <th>Homepage</th>
+    <th></th>
+    <th></th>
+    <th></th>
   </tr>
  
   <% @authors.each do |author| %>
@@ -12,6 +15,7 @@
       <td><a href=<%= author.homepage %>> <%= author.homepage %> </td>
       <td><%= link_to 'Show', author_path(author) %></td>
       <td><%= link_to 'Edit', edit_author_path(author) %></td>
+      <td><%= link_to 'Delete', author_path(author), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %> </td>
     </tr>
   <% end %>
 </table>
