--- a/app/views/papers/_paper.html.erb
+++ b/app/views/papers/_paper.html.erb
@@ -13,5 +13,12 @@
     <strong>Year:</strong>
     <%= paper.year %>
   </p>
-
+  <p>
+      <strong>Authors</strong>
+  </p>
+  <% paper.authors.each do |author| %>
+    <p>
+      <%= author.name %>
+    </p>
+  <% end %>
 </div>
